ingress/nginx-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: wordpress-ingress
 annotations:
   cert-manager.io/cluster-issuer: lets-encrypt
spec:
 tls:
 - hosts:
   - proyecto2.solargauge.site
   secretName: microbot-ingress-tls
 rules:
 - host: proyecto2.solargauge.site
   http:
     paths:
     - backend:
         service:
           name: wordpress
           port:
             number: 80
       path: /
       pathType: Prefix
